--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-message=always
 server.port=8060
-#settings of a connection with Kafka:
-#spring.kafka.consumer.order_status_notification.properties.spring.json.type.mapping=order_status_notification:ru.job4j.notification.model.OrderStatus
-spring.kafka.consumer.properties.spring.json.type.mapping=order_status_notification:ru.job4j.notification.model.OrderStatus
+#Settings for receiving messages from a topic "notification00":
+spring.kafka.consumer.properties.spring.json.type.mapping=notification:ru.job4j.notification.model.OrderStatus
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=group-id
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-
-
-
 #Log settings:
 logging.level.root=warn
 logging.level.org.springframework.web=error
